Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-01 (SVN):
    * libs/xdelta3: Removed large amount of code not needed by our use.
      Added progress bar stuff. Added djgpp support. Improved mingw
      support. Fixed compiler warnings. Some other cleanups.
    * libs/xdelta3: Added Joshua P. MacDonald's xdelta3 library and some
      of its main() extras.
    * libs/md5: Created new libs directory. Moved md5.* from launcher to
      the new place.
    * launcher: removed loki_xdelta.* and moved apply_patch.* out of the
      xpatch directory.
    * gamecode/pak_v111, libs/xdelta11: Removed (moved to /old).

2011-05-25 (SVN):
    * libs/xdelta11 (Makefile.xd): Removed XDELTA_OBJS objects from the
      libxdelta.a target. Changed the xdelta target to use libxdelta.a.

2011-05-25 (SVN):
    * hexenworld/server/sv_init.c (SV_SpawnServer):  Increment realtime
      merely by a fraction before each SV_Physics() call, otherwise
      SV_Physics() actually returns immediately without doing anything.
      This was the reason for the long- and well-known hexenworld server
      crash for the romeric5 map.  Patch from Thomas Freundt.
    * Changed beta version stamp to 2011-05-25.

2011-05-25 (SVN):
    * Reverted HexenC LinkDoors() changes from 2011-05-22, rev. 3972,
      engine fix for the romeric5 crash will follow.
    * Reverted ents_not_loaded addition from 2011-05-22, rev. 3970.

2011-05-23 (SVN):
    * added Thomas' egypt1 ankh_platform stuff as an optional patch.

2011-05-22 (SVN):
    * hexenworld gamecode: Really fixed the HexenWorld server crash upon
      running the romeric5 (Temple of Mars) map which loads fine now on
      all machines we tested.  The problem was that timing-dependent
      hackings associated with func_door_rotating not working as expected
      under hexenworld, so such hacks are eliminated.  The solution also
      includes making sure that all doors have been initialized before